fixing alignment

--- a/style.css
+++ b/style.css
@@ -5,5 +5,8 @@ body {
 }
 
 .portal {
-  position: center;
+  margin: 0;
+  position: sticky;
+  left: 50%;
+  text-align: center;
 }
